final changes + code comments

--- a/spaceinvaders.html
+++ b/spaceinvaders.html
@@ -42,5 +42,14 @@
             <text x = "20" y = "30" class = "scoretitle">Score:</text>
             <text id= "score" x = "120" y = "30.5" class = "score">0 </text>
             </svg>
+            <!-- Control box: referred from Tim's asteroid code -->
+            <div id="controls">
+                <h2>Controls:</h2>
+                <table>
+                    <tr><td>Move Left</td><td><div id="ArrowLeft" class="key">&#8679;</div></td></tr>
+                    <tr><td>Move Right</td><td><div id="ArrowRight" class="key">&#8681;</div></td></tr>
+                    <tr><td>Fire</td><td><div id="ArrowUp" class="key">&#8679;</div></td></tr>
+                    <tr><td>Do not let the aliens cross the red line or shoot you!</td></tr>
+                </table>
     </body>
 </html>
